# Latte

./: .gitmodules  CMakeLists.txt
cmake/: Dependencies.cmake
cmake/Modules/: FindOpenCL.cmake
cmake/Patches/: gflags-submodule.patch  openblas-submodule.patch  openmp-submodule.patch
src/: CMakeLists.txt  common.h  common.hpp  graph.cpp  graph.hpp  layer.cpp  layer.hpp  layer_iterator.cpp  linear.cpp  linear.hpp  main.cpp  matrix.cpp  matrix.hpp  matrix_factory.cpp  matrix_factory.hpp  omp_math.hpp  sigmoid.cpp  sigmoid.hpp  sse_math.h
src/activations/: activation.hpp  lrelu_activation.cpp  lrelu_activation.hpp  relu_activation.cpp  relu_activation.hpp  sigmoid_activation.cpp  sigmoid_activation.hpp
src/fillers/: filler.hpp  random_filler.cpp  random_filler.hpp
src/layers/: connection.cpp  connection.hpp  dense_layer.cpp  dense_layer.hpp  euclidean_loss.cpp  euclidean_loss.hpp  layer.cpp  layer.hpp  loss.cpp  loss.hpp  sigmoid_layer.cpp  sigmoid_layer.hpp
src/layers/config/: formatter.hpp  formatter_specialize.hpp
src/layers/utils/: layer_config.cpp  layer_config.hpp  layer_iterator.cpp
src/magic/: factory.cpp  factory.hpp  named_parameters.hpp
src/matrix/: matrix.cpp  matrix.hpp  matrix_factory.cpp
src/optimization/: sgd.cpp  sgd.hpp
src/optimization/utils/: sgd_config.cpp  sgd_config.hpp
src/utils/: rng.cpp  rng.hpp
